--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <main class="container">
             <video class="movie">
-                <source src="./assets/InYourEyes.mp4" />
+                <source src="./assets/HotterThanHell.mp4" />
             </video>
 
             <button>Play/Pause</button>
         </main>
 
-        <script src="./assets/index.js"></script>
+        <script type="module" src="./assets/index.js"></script>
     </body>
 </html>
