--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <main class="container">
             <video class="movie">
-                <source src="./assets/HotterThanHell.mp4" />
+                <source src="./assets/InYourEyes.mp4" />
             </video>
 
             <button>Play/Pause</button>
