--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <source src="./assets/InYourEyes.mp4" />
             </video>
 
-            <button>Play/Pause</button>
+            <button id="togglePlay">Play/Pause</button>
+            <button id="toggleMute">Mute/Unmute</button>
         </main>
 
         <script type="module" src="./js/index.js"></script>
