Creating autopause pluggin

--- a/index.html
+++ b/index.html
@@ -22,6 +22,131 @@
             <button id="togglePlay">Play/Pause</button>
             <button id="toggleMute">Mute/Unmute</button>
         </main>
+        <h2>Coments</h2>
+        <ul>
+            <li>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Delectus voluptatibus, illo quasi perferendis magni molestias,
+                consequatur dolorem optio vitae iusto architecto eaque amet
+                dolor commodi nulla facilis. Necessitatibus, ex architecto?
+            </li>
+            <li>
+                Doloribus, facilis impedit beatae ipsam laboriosam perspiciatis,
+                non explicabo asperiores consequatur sit culpa deserunt,
+                laudantium doloremque velit minima harum quas eos in molestias?
+                Rem at quisquam consectetur perspiciatis corporis voluptatibus!
+            </li>
+            <li>
+                Dolores, quod aliquam. Aliquam vero excepturi quia, officiis
+                rerum mollitia tenetur aliquid quisquam laudantium libero ipsum.
+                Eaque modi quisquam ab cum veniam deserunt minus porro
+                perferendis, velit, tenetur at ipsa!
+            </li>
+            <li>
+                Sapiente ipsam ducimus vel iure vitae voluptatem? Delectus,
+                quaerat alias saepe recusandae expedita consequatur, iure
+                voluptatem laboriosam magnam quod possimus ex eos amet numquam
+                repellendus, ratione placeat ipsum voluptatibus et!
+            </li>
+            <li>
+                Asperiores fugiat obcaecati autem illum necessitatibus odio?
+                Saepe, blanditiis laboriosam molestiae odit incidunt esse
+                doloribus exercitationem libero harum provident sint fugiat
+                ducimus facere repellendus tempore debitis, ipsa consequuntur
+                fuga nam?
+            </li>
+            <li>
+                Ducimus placeat nulla omnis dolor cum? Esse ad recusandae rem
+                vero asperiores nesciunt in dolorem officiis cum odio totam ea
+                voluptatibus, quidem doloremque, vitae laudantium. Architecto
+                soluta aliquam consectetur amet.
+            </li>
+            <li>
+                Maiores illo ipsam veniam laudantium quae neque quo, ex
+                quibusdam itaque, placeat eius nemo labore ratione assumenda,
+                perferendis culpa soluta recusandae asperiores illum officia.
+                Cupiditate sapiente a libero consequuntur architecto!
+            </li>
+            <li>
+                Odit nam placeat accusantium est, nihil illo enim veritatis,
+                iste exercitationem at laboriosam necessitatibus numquam,
+                repellendus delectus ea sapiente? Optio fuga a deleniti amet
+                corrupti consectetur necessitatibus minus cumque labore?
+            </li>
+            <li>
+                Ullam doloremque laborum, repellat sit facilis enim dolor. Ea
+                accusamus dolores consequatur beatae corporis quam nesciunt
+                dolor commodi, asperiores amet sequi obcaecati magnam optio,
+                nihil quos quo eaque est harum.
+            </li>
+            <li>
+                Repellat cupiditate, numquam rem incidunt expedita animi
+                reiciendis nemo quisquam iste iure ipsam magni porro laboriosam
+                quos error quo aliquam facilis commodi autem quia recusandae
+                nihil. Tenetur natus et minima.
+            </li>
+            <li>
+                Nobis quod architecto iure amet magni quae optio adipisci,
+                repudiandae blanditiis quis unde nesciunt hic dolorem labore
+                fugiat sapiente. Fugiat, odio voluptatem enim aspernatur eum
+                dignissimos? Possimus rem fugit quos.
+            </li>
+            <li>
+                Eius enim hic doloremque doloribus distinctio? Quibusdam numquam
+                veritatis obcaecati, animi facilis, non a amet, harum optio ex
+                tempore? Corporis dolore nobis qui earum recusandae voluptates
+                accusamus delectus officiis hic.
+            </li>
+            <li>
+                Nobis temporibus eius sint omnis. Ipsam porro illo veritatis
+                voluptas dolorem, placeat ut enim aspernatur fuga autem libero
+                fugiat quaerat laborum cum necessitatibus quos ad mollitia
+                perspiciatis. Vel, aspernatur sint.
+            </li>
+            <li>
+                Nesciunt dignissimos saepe, possimus impedit quod consectetur
+                obcaecati expedita veritatis voluptatibus hic necessitatibus
+                sint quae sed aspernatur nihil error! Odit excepturi inventore
+                laudantium aliquam repudiandae explicabo labore ipsam modi
+                delectus!
+            </li>
+            <li>
+                Eum fuga quo distinctio consequuntur autem eligendi voluptates
+                velit maxime, ipsa officiis in dicta accusantium sint quam atque
+                corrupti expedita est sit ratione. Magni neque mollitia illum
+                exercitationem, accusamus laboriosam!
+            </li>
+            <li>
+                Vel sunt iure deleniti itaque atque tenetur, quidem maiores
+                excepturi, nam eius commodi, labore corporis porro quas fugit ea
+                maxime ab illum! Hic corporis corrupti quo velit, possimus nisi
+                ea?
+            </li>
+            <li>
+                Qui eos fugiat impedit! Recusandae ipsum quisquam accusantium
+                odit eaque aut! Animi quos exercitationem magni excepturi
+                ratione odio deserunt iure, nostrum qui. Cupiditate quos libero
+                laboriosam molestiae maxime, enim dolorum.
+            </li>
+            <li>
+                Vel illo, asperiores labore rerum amet eligendi earum dolor
+                obcaecati sed ad soluta natus laudantium quibusdam odio magni
+                eius numquam quod architecto fuga eveniet. Quos doloremque ex
+                quas expedita aspernatur.
+            </li>
+            <li>
+                Eum deleniti provident illum dolores voluptatem itaque ipsam quo
+                totam recusandae voluptatum voluptatibus atque incidunt,
+                tempora, ipsa sit consequatur sed reiciendis officia unde
+                molestiae quisquam odit accusamus ratione laboriosam. Fugit.
+            </li>
+            <li>
+                Vel, ipsam sequi sapiente natus, voluptatibus obcaecati fugiat
+                id labore provident est nemo tenetur, suscipit neque vitae a
+                quasi culpa. Aliquid iusto doloribus cupiditate repellat, rem
+                soluta beatae aperiam tempore.
+            </li>
+        </ul>
 
         <script type="module" src="./js/index.js"></script>
     </body>
