Moving the project to Typescript

--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
             </li>
         </ul>
 
-        <script type="module" src="./js/index.js"></script>
+        <script type="module" src="./js/index.ts"></script>
     </body>
 </html>
