--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
             </li>
         </ul>
 
-        <script type="module" src="./dist/js/index.js"></script>
+        <script type="module" src="./dist/src/index.js"></script>
     </body>
 </html>
