--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <html>
     <head>
-        <title>PlatziMediaPlayer.js</title>
+        <title>VideoPlayer.js</title>
         <link
             rel="stylesheet"
             href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
         />
-        <link rel="stylesheet" href="./assets/index.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+
+        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="stylesheet" href="./css/video.css" />
+        <link rel="stylesheet" href="./css/ads.css" />
     </head>
 
     <body>
         <header>
-            <h1>PlatziMediaPlayer.js</h1>
+            <h1>VideoPlayer.js</h1>
             <p>An extensible media player.</p>
         </header>
 
         <main class="container">
-            <video class="movie">
-                <source src="./assets/InYourEyes.mp4" />
-            </video>
-
-            <button id="togglePlay">Play/Pause</button>
-            <button id="toggleMute">Mute/Unmute</button>
+            <div class="movie">
+                <video class="movie__video">
+                    <source src="./assets/InYourEyes.mp4" />
+                </video>
+                <div class="movie__actions">
+                    <button class="movie__button" id="togglePlay" class="btn">
+                        <i class="fa fa-play-circle"></i>
+                    </button>
+                    <button class="movie__button" id="toggleMute" class="btn">
+                        <i class="fa fa-volume-up"></i>
+                    </button>
+                </div>
+            </div>
         </main>
         <h2>Coments</h2>
         <ul>
